# defcon33

./: CMakeLists.txt  LICENSE  README.md  setup_dev_env.sh
data/: afhq32_train.csv  afhq32_val.csv  afhq64_train.csv  afhq64_val.csv
data/afhq32/: afhq32_labels.csv
data/afhq64/: afhq64_labels.csv
life/: Makefile  life  life.cu  life_kernel.cuh  life_ncurses.cpp  life_ncurses.cu
matrix/: Makefile  analyze.sh  matmul.cu  matmul.cuh  matrix_mult_cuda_compare.cu  matrix_mult_cuda_host.cpp  runmatrix.sh
mlperceptron/: Makefile  logic_gates.sh  mlp_cuda_host.cpp  mlp_kernels.cu  mlp_kernels.cuh  perceptron_cuda_host.cpp  perceptron_kernel.cu  perceptron_kernel.cuh
perceptron/: Makefile  makerun.sh  perceptron_cpu  perceptron_cpu.c  perceptron_cuda  perceptron_cuda_host.cpp  perceptron_kernel.cu  perceptron_kernel.cuh
reg/: Makefile  linreg_ncurses  linreg_ncurses.c  makerun.sh  polyreg_ncurses  polyreg_ncurses.c
simple_cnn/: Makefile  cnn_cpu  cnn_cpu.c  cnn_cuda  cnn_cuda.cu  run_cnn.sh
src/: cltest.c  cnn_cpu.c  cnn_cuda_afhq1.c  cnn_kernel.cl  cnn_kernels.cu  cnn_kernels.h  cnn_kernels_device.h  cnn_opencl.c  cnn_opencl_a.c  cnn_opencl_b.c  cnn_opencl_c.c  cnn_opencl_d.c  life.cl  list_platforms.c  main.c  matrix_mult_cpu.c  matrix_mult_kernel.cl  matrix_mult_opencl.c  ml_perceptron_cpu.c  ml_perceptron_kernel.cl  ml_perceptron_opencl.c  perceptron_kernel.cl  perceptron_opencl.c
